load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix valerian
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    prefix = "valerian",
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//app/infra/config/cmd:all-srcs",
        "//app/infra/config/conf:all-srcs",
        "//app/infra/config/dao:all-srcs",
        "//app/infra/config/http:all-srcs",
        "//app/infra/config/model:all-srcs",
        "//app/infra/config/rpc/client:all-srcs",
        "//app/infra/config/rpc/server:all-srcs",
        "//app/infra/config/service:all-srcs",
        "//app/infra/discovery/cmd:all-srcs",
        "//app/infra/discovery/conf:all-srcs",
        "//app/infra/discovery/dao:all-srcs",
        "//app/infra/discovery/http:all-srcs",
        "//app/infra/discovery/model:all-srcs",
        "//app/infra/discovery/service:all-srcs",
        "//app/interface/account/cmd:all-srcs",
        "//app/interface/account/conf:all-srcs",
        "//app/interface/account/dao:all-srcs",
        "//app/interface/account/http:all-srcs",
        "//app/interface/account/model:all-srcs",
        "//app/interface/account/service:all-srcs",
        "//app/interface/certification/cmd:all-srcs",
        "//app/interface/certification/conf:all-srcs",
        "//app/interface/certification/dao:all-srcs",
        "//app/interface/certification/http:all-srcs",
        "//app/interface/certification/model:all-srcs",
        "//app/interface/certification/service:all-srcs",
        "//app/interface/dm/http:all-srcs",
        "//app/interface/dm/model:all-srcs",
        "//app/interface/editor/cmd:all-srcs",
        "//app/interface/editor/conf:all-srcs",
        "//app/interface/editor/http:all-srcs",
        "//app/interface/editor/model:all-srcs",
        "//app/interface/editor/service:all-srcs",
        "//app/interface/feedback/cmd:all-srcs",
        "//app/interface/feedback/conf:all-srcs",
        "//app/interface/feedback/dao:all-srcs",
        "//app/interface/feedback/http:all-srcs",
        "//app/interface/feedback/model:all-srcs",
        "//app/interface/feedback/service:all-srcs",
        "//app/interface/file/cmd:all-srcs",
        "//app/interface/file/conf:all-srcs",
        "//app/interface/file/http:all-srcs",
        "//app/interface/file/model:all-srcs",
        "//app/interface/file/service:all-srcs",
        "//app/interface/locale/cmd:all-srcs",
        "//app/interface/locale/conf:all-srcs",
        "//app/interface/locale/dao:all-srcs",
        "//app/interface/locale/http:all-srcs",
        "//app/interface/locale/model:all-srcs",
        "//app/interface/locale/service:all-srcs",
        "//app/interface/location/cmd:all-srcs",
        "//app/interface/location/conf:all-srcs",
        "//app/interface/location/dao:all-srcs",
        "//app/interface/location/http:all-srcs",
        "//app/interface/location/model:all-srcs",
        "//app/interface/location/service:all-srcs",
        "//app/interface/passport-auth/cmd:all-srcs",
        "//app/interface/passport-auth/conf:all-srcs",
        "//app/interface/passport-auth/dao:all-srcs",
        "//app/interface/passport-auth/http:all-srcs",
        "//app/interface/passport-auth/model:all-srcs",
        "//app/interface/passport-auth/service:all-srcs",
        "//app/interface/passport-login/cmd:all-srcs",
        "//app/interface/passport-login/conf:all-srcs",
        "//app/interface/passport-login/dao:all-srcs",
        "//app/interface/passport-login/http:all-srcs",
        "//app/interface/passport-login/model:all-srcs",
        "//app/interface/passport-login/service:all-srcs",
        "//app/interface/passport-register/cmd:all-srcs",
        "//app/interface/passport-register/conf:all-srcs",
        "//app/interface/passport-register/dao:all-srcs",
        "//app/interface/passport-register/http:all-srcs",
        "//app/interface/passport-register/model:all-srcs",
        "//app/interface/passport-register/service:all-srcs",
        "//app/interface/valcode/cmd:all-srcs",
        "//app/interface/valcode/conf:all-srcs",
        "//app/interface/valcode/dao:all-srcs",
        "//app/interface/valcode/http:all-srcs",
        "//app/interface/valcode/model:all-srcs",
        "//app/interface/valcode/service:all-srcs",
        "//app/service/account/api:all-srcs",
        "//app/service/account/cmd:all-srcs",
        "//app/service/account/conf:all-srcs",
        "//app/service/account/dao:all-srcs",
        "//app/service/account/model:all-srcs",
        "//app/service/account/server/grpc:all-srcs",
        "//app/service/account/server/http:all-srcs",
        "//app/service/account/service:all-srcs",
        "//app/service/identify/api/grpc:all-srcs",
        "//app/service/identify/cmd:all-srcs",
        "//app/service/identify/conf:all-srcs",
        "//app/service/identify/dao:all-srcs",
        "//app/service/identify/model:all-srcs",
        "//app/service/identify/server/grpc:all-srcs",
        "//app/service/identify/server/http:all-srcs",
        "//app/service/identify/service:all-srcs",
        "//app/service/msm/cmd:all-srcs",
        "//app/service/msm/conf:all-srcs",
        "//app/service/msm/dao:all-srcs",
        "//app/service/msm/http:all-srcs",
        "//app/service/msm/model:all-srcs",
        "//app/service/msm/service:all-srcs",
        "//app/service/relation/cmd:all-srcs",
        "//app/service/relation/model:all-srcs",
        "//app/service/relation/service:all-srcs",
        "//app/service/topic/conf:all-srcs",
        "//app/service/topic/dao:all-srcs",
        "//app/service/topic/model:all-srcs",
        "//app/service/topic/service:all-srcs",
        "//app/tool/warden:all-srcs",
        "//docs:all-srcs",
        "//library/cache:all-srcs",
        "//library/cloudauth:all-srcs",
        "//library/conf:all-srcs",
        "//library/container/pool:all-srcs",
        "//library/container/queue/aqm:all-srcs",
        "//library/database/elastic:all-srcs",
        "//library/database/sqalx:all-srcs",
        "//library/database/sqlx:all-srcs",
        "//library/ecode:all-srcs",
        "//library/email:all-srcs",
        "//library/exp/feature:all-srcs",
        "//library/gid:all-srcs",
        "//library/locale:all-srcs",
        "//library/log:all-srcs",
        "//library/naming:all-srcs",
        "//library/net/http/mars:all-srcs",
        "//library/net/ip:all-srcs",
        "//library/net/metadata:all-srcs",
        "//library/net/netutil:all-srcs",
        "//library/net/rpc:all-srcs",
        "//library/rate:all-srcs",
        "//library/sms:all-srcs",
        "//library/stat:all-srcs",
        "//library/sync/errgroup:all-srcs",
        "//library/sync/errgroup.v2:all-srcs",
        "//library/sync/pipeline:all-srcs",
        "//library/syscall:all-srcs",
        "//library/time:all-srcs",
        "//library/tracing:all-srcs",
        "//library/xstr:all-srcs",
        "//vendor/k8s.io/test-infra/ghproxy/ghcache:all-srcs",
        "//vendor/k8s.io/test-infra/ghproxy/ghmetrics:all-srcs",
        "//vendor/k8s.io/test-infra/prow/apis/prowjobs:all-srcs",
        "//vendor/k8s.io/test-infra/prow/bugzilla:all-srcs",
        "//vendor/k8s.io/test-infra/prow/client/clientset/versioned:all-srcs",
        "//vendor/k8s.io/test-infra/prow/clonerefs:all-srcs",
        "//vendor/k8s.io/test-infra/prow/config:all-srcs",
        "//vendor/k8s.io/test-infra/prow/entrypoint:all-srcs",
        "//vendor/k8s.io/test-infra/prow/errorutil:all-srcs",
        "//vendor/k8s.io/test-infra/prow/flagutil:all-srcs",
        "//vendor/k8s.io/test-infra/prow/gcsupload:all-srcs",
        "//vendor/k8s.io/test-infra/prow/git:all-srcs",
        "//vendor/k8s.io/test-infra/prow/github:all-srcs",
        "//vendor/k8s.io/test-infra/prow/initupload:all-srcs",
        "//vendor/k8s.io/test-infra/prow/kube:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/clone:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/decorate:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/downwardapi:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/gcs:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/wrapper:all-srcs",
        "//vendor/k8s.io/test-infra/prow/sidecar:all-srcs",
        "//vendor/k8s.io/test-infra/testgrid/metadata:all-srcs",
        "//vendor/k8s.io/test-infra/testgrid/util/gcs:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
