load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix valerian
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    prefix = "valerian",
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
