load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix valerian
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    prefix = "valerian",
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//app/infra/config/cmd:all-srcs",
        "//app/infra/config/conf:all-srcs",
        "//app/infra/config/dao:all-srcs",
        "//app/infra/config/http:all-srcs",
        "//app/infra/config/model:all-srcs",
        "//app/infra/config/rpc/client:all-srcs",
        "//app/infra/config/rpc/server:all-srcs",
        "//app/infra/config/service:all-srcs",
        "//app/infra/discovery/cmd:all-srcs",
        "//app/infra/discovery/conf:all-srcs",
        "//app/infra/discovery/dao:all-srcs",
        "//app/infra/discovery/http:all-srcs",
        "//app/infra/discovery/model:all-srcs",
        "//app/infra/discovery/service:all-srcs",
        "//app/interface/account/cmd:all-srcs",
        "//app/interface/account/conf:all-srcs",
        "//app/interface/account/dao:all-srcs",
        "//app/interface/account/http:all-srcs",
        "//app/interface/account/model:all-srcs",
        "//app/interface/account/service:all-srcs",
        "//app/interface/certification/cmd:all-srcs",
        "//app/interface/certification/conf:all-srcs",
        "//app/interface/certification/dao:all-srcs",
        "//app/interface/certification/http:all-srcs",
        "//app/interface/certification/model:all-srcs",
        "//app/interface/certification/service:all-srcs",
        "//app/interface/dm/http:all-srcs",
        "//app/interface/dm/model:all-srcs",
        "//app/interface/editor/cmd:all-srcs",
        "//app/interface/editor/conf:all-srcs",
        "//app/interface/editor/http:all-srcs",
        "//app/interface/editor/model:all-srcs",
        "//app/interface/editor/service:all-srcs",
        "//app/interface/feedback/cmd:all-srcs",
        "//app/interface/feedback/conf:all-srcs",
        "//app/interface/feedback/dao:all-srcs",
        "//app/interface/feedback/http:all-srcs",
        "//app/interface/feedback/model:all-srcs",
        "//app/interface/feedback/service:all-srcs",
        "//app/interface/file/cmd:all-srcs",
        "//app/interface/file/conf:all-srcs",
        "//app/interface/file/http:all-srcs",
        "//app/interface/file/model:all-srcs",
        "//app/interface/file/service:all-srcs",
        "//app/interface/locale/cmd:all-srcs",
        "//app/interface/locale/conf:all-srcs",
        "//app/interface/locale/dao:all-srcs",
        "//app/interface/locale/http:all-srcs",
        "//app/interface/locale/model:all-srcs",
        "//app/interface/locale/service:all-srcs",
        "//app/interface/location/cmd:all-srcs",
        "//app/interface/location/conf:all-srcs",
        "//app/interface/location/dao:all-srcs",
        "//app/interface/location/http:all-srcs",
        "//app/interface/location/model:all-srcs",
        "//app/interface/location/service:all-srcs",
        "//app/interface/passport-auth/cmd:all-srcs",
        "//app/interface/passport-auth/conf:all-srcs",
        "//app/interface/passport-auth/dao:all-srcs",
        "//app/interface/passport-auth/http:all-srcs",
        "//app/interface/passport-auth/model:all-srcs",
        "//app/interface/passport-auth/service:all-srcs",
        "//app/interface/passport-login/cmd:all-srcs",
        "//app/interface/passport-login/conf:all-srcs",
        "//app/interface/passport-login/dao:all-srcs",
        "//app/interface/passport-login/http:all-srcs",
        "//app/interface/passport-login/model:all-srcs",
        "//app/interface/passport-login/service:all-srcs",
        "//app/interface/passport-register/cmd:all-srcs",
        "//app/interface/passport-register/conf:all-srcs",
        "//app/interface/passport-register/dao:all-srcs",
        "//app/interface/passport-register/http:all-srcs",
        "//app/interface/passport-register/model:all-srcs",
        "//app/interface/passport-register/service:all-srcs",
        "//app/interface/valcode/cmd:all-srcs",
        "//app/interface/valcode/conf:all-srcs",
        "//app/interface/valcode/dao:all-srcs",
        "//app/interface/valcode/http:all-srcs",
        "//app/interface/valcode/model:all-srcs",
        "//app/interface/valcode/service:all-srcs",
        "//app/service/account/api:all-srcs",
        "//app/service/account/cmd:all-srcs",
        "//app/service/account/conf:all-srcs",
        "//app/service/account/dao:all-srcs",
        "//app/service/account/model:all-srcs",
        "//app/service/account/server/grpc:all-srcs",
        "//app/service/account/server/http:all-srcs",
        "//app/service/account/service:all-srcs",
        "//app/service/identify/api/grpc:all-srcs",
        "//app/service/identify/cmd:all-srcs",
        "//app/service/identify/conf:all-srcs",
        "//app/service/identify/dao:all-srcs",
        "//app/service/identify/model:all-srcs",
        "//app/service/identify/server/grpc:all-srcs",
        "//app/service/identify/server/http:all-srcs",
        "//app/service/identify/service:all-srcs",
        "//app/service/msm/cmd:all-srcs",
        "//app/service/msm/conf:all-srcs",
        "//app/service/msm/dao:all-srcs",
        "//app/service/msm/http:all-srcs",
        "//app/service/msm/model:all-srcs",
        "//app/service/msm/service:all-srcs",
        "//app/service/relation/cmd:all-srcs",
        "//app/service/relation/conf:all-srcs",
        "//app/service/relation/dao:all-srcs",
        "//app/service/relation/model:all-srcs",
        "//app/service/relation/service:all-srcs",
        "//app/service/topic/conf:all-srcs",
        "//app/service/topic/dao:all-srcs",
        "//app/service/topic/model:all-srcs",
        "//app/service/topic/server/http:all-srcs",
        "//app/service/topic/service:all-srcs",
        "//app/tool/mkprow:all-srcs",
        "//app/tool/owner:all-srcs",
        "//app/tool/warden:all-srcs",
        "//docs:all-srcs",
        "//library/cache:all-srcs",
        "//library/cloudauth:all-srcs",
        "//library/conf:all-srcs",
        "//library/container/pool:all-srcs",
        "//library/container/queue/aqm:all-srcs",
        "//library/database/elastic:all-srcs",
        "//library/database/sqalx:all-srcs",
        "//library/database/sqlx:all-srcs",
        "//library/ecode:all-srcs",
        "//library/email:all-srcs",
        "//library/exp/feature:all-srcs",
        "//library/gid:all-srcs",
        "//library/locale:all-srcs",
        "//library/log:all-srcs",
        "//library/naming:all-srcs",
        "//library/net/http/mars:all-srcs",
        "//library/net/ip:all-srcs",
        "//library/net/metadata:all-srcs",
        "//library/net/netutil:all-srcs",
        "//library/net/rpc:all-srcs",
        "//library/rate:all-srcs",
        "//library/sms:all-srcs",
        "//library/stat:all-srcs",
        "//library/sync/errgroup:all-srcs",
        "//library/sync/errgroup.v2:all-srcs",
        "//library/sync/pipeline:all-srcs",
        "//library/syscall:all-srcs",
        "//library/time:all-srcs",
        "//library/tracing:all-srcs",
        "//library/xstr:all-srcs",
        "//vendor/cloud.google.com/go/compute/metadata:all-srcs",
        "//vendor/cloud.google.com/go/iam:all-srcs",
        "//vendor/cloud.google.com/go/internal:all-srcs",
        "//vendor/cloud.google.com/go/storage:all-srcs",
        "//vendor/github.com/Azure/go-autorest/autorest:all-srcs",
        "//vendor/github.com/Azure/go-autorest/logger:all-srcs",
        "//vendor/github.com/Azure/go-autorest/version:all-srcs",
        "//vendor/github.com/BurntSushi/toml:all-srcs",
        "//vendor/github.com/KyleBanks/depth:all-srcs",
        "//vendor/github.com/PuerkitoBio/goquery:all-srcs",
        "//vendor/github.com/PuerkitoBio/purell:all-srcs",
        "//vendor/github.com/PuerkitoBio/urlesc:all-srcs",
        "//vendor/github.com/alecthomas/template:all-srcs",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/sdk:all-srcs",
        "//vendor/github.com/andybalholm/cascadia:all-srcs",
        "//vendor/github.com/asaskevich/govalidator:all-srcs",
        "//vendor/github.com/beorn7/perks/quantile:all-srcs",
        "//vendor/github.com/bwmarrin/snowflake:all-srcs",
        "//vendor/github.com/davecgh/go-spew/spew:all-srcs",
        "//vendor/github.com/dgrijalva/jwt-go:all-srcs",
        "//vendor/github.com/dgryski/go-farm:all-srcs",
        "//vendor/github.com/evanphx/json-patch:all-srcs",
        "//vendor/github.com/fsnotify/fsnotify:all-srcs",
        "//vendor/github.com/ghodss/yaml:all-srcs",
        "//vendor/github.com/go-openapi/jsonpointer:all-srcs",
        "//vendor/github.com/go-openapi/jsonreference:all-srcs",
        "//vendor/github.com/go-openapi/spec:all-srcs",
        "//vendor/github.com/go-openapi/swag:all-srcs",
        "//vendor/github.com/go-ozzo/ozzo-validation:all-srcs",
        "//vendor/github.com/go-playground/locales:all-srcs",
        "//vendor/github.com/go-playground/universal-translator:all-srcs",
        "//vendor/github.com/go-sql-driver/mysql:all-srcs",
        "//vendor/github.com/gobuffalo/envy:all-srcs",
        "//vendor/github.com/gobuffalo/packd:all-srcs",
        "//vendor/github.com/gobuffalo/packr:all-srcs",
        "//vendor/github.com/gomodule/redigo/redis:all-srcs",
        "//vendor/github.com/google/btree:all-srcs",
        "//vendor/github.com/google/go-cmp/cmp:all-srcs",
        "//vendor/github.com/google/gofuzz:all-srcs",
        "//vendor/github.com/googleapis/gax-go/v2:all-srcs",
        "//vendor/github.com/googleapis/gnostic/OpenAPIv2:all-srcs",
        "//vendor/github.com/googleapis/gnostic/compiler:all-srcs",
        "//vendor/github.com/googleapis/gnostic/extensions:all-srcs",
        "//vendor/github.com/gophercloud/gophercloud:all-srcs",
        "//vendor/github.com/gopherjs/gopherjs/js:all-srcs",
        "//vendor/github.com/gorilla/context:all-srcs",
        "//vendor/github.com/gorilla/securecookie:all-srcs",
        "//vendor/github.com/gorilla/sessions:all-srcs",
        "//vendor/github.com/gregjones/httpcache:all-srcs",
        "//vendor/github.com/h2non/parth:all-srcs",
        "//vendor/github.com/hashicorp/golang-lru:all-srcs",
        "//vendor/github.com/imdario/mergo:all-srcs",
        "//vendor/github.com/jinzhu/copier:all-srcs",
        "//vendor/github.com/jmespath/go-jmespath:all-srcs",
        "//vendor/github.com/jmoiron/sqlx/reflectx:all-srcs",
        "//vendor/github.com/joho/godotenv:all-srcs",
        "//vendor/github.com/json-iterator/go:all-srcs",
        "//vendor/github.com/jtolds/gls:all-srcs",
        "//vendor/github.com/knative/build/pkg/apis/build:all-srcs",
        "//vendor/github.com/knative/pkg/apis:all-srcs",
        "//vendor/github.com/knative/pkg/kmeta:all-srcs",
        "//vendor/github.com/knative/pkg/kmp:all-srcs",
        "//vendor/github.com/konsorten/go-windows-terminal-sequences:all-srcs",
        "//vendor/github.com/leodido/go-urn:all-srcs",
        "//vendor/github.com/lib/pq:all-srcs",
        "//vendor/github.com/logrusorgru/aurora:all-srcs",
        "//vendor/github.com/mailru/easyjson/buffer:all-srcs",
        "//vendor/github.com/mailru/easyjson/jlexer:all-srcs",
        "//vendor/github.com/mailru/easyjson/jwriter:all-srcs",
        "//vendor/github.com/mattbaird/jsonpatch:all-srcs",
        "//vendor/github.com/mattn/go-sqlite3:all-srcs",
        "//vendor/github.com/matttproud/golang_protobuf_extensions/pbutil:all-srcs",
        "//vendor/github.com/modern-go/concurrent:all-srcs",
        "//vendor/github.com/modern-go/reflect2:all-srcs",
        "//vendor/github.com/mohae/deepcopy:all-srcs",
        "//vendor/github.com/montanaflynn/stats:all-srcs",
        "//vendor/github.com/naoina/go-stringutil:all-srcs",
        "//vendor/github.com/naoina/toml:all-srcs",
        "//vendor/github.com/nicksnyder/go-i18n/v2/i18n:all-srcs",
        "//vendor/github.com/nicksnyder/go-i18n/v2/internal:all-srcs",
        "//vendor/github.com/opentracing-contrib/go-stdlib/nethttp:all-srcs",
        "//vendor/github.com/opentracing/opentracing-go:all-srcs",
        "//vendor/github.com/peterbourgon/diskv:all-srcs",
        "//vendor/github.com/pkg/errors:all-srcs",
        "//vendor/github.com/pmezard/go-difflib/difflib:all-srcs",
        "//vendor/github.com/prometheus/client_golang/prometheus:all-srcs",
        "//vendor/github.com/prometheus/client_model/go:all-srcs",
        "//vendor/github.com/prometheus/common/expfmt:all-srcs",
        "//vendor/github.com/prometheus/common/internal/bitbucket.org/ww/goautoneg:all-srcs",
        "//vendor/github.com/prometheus/common/model:all-srcs",
        "//vendor/github.com/prometheus/procfs:all-srcs",
        "//vendor/github.com/rogpeppe/go-internal/modfile:all-srcs",
        "//vendor/github.com/rogpeppe/go-internal/module:all-srcs",
        "//vendor/github.com/rogpeppe/go-internal/semver:all-srcs",
        "//vendor/github.com/samuel/go-zookeeper/zk:all-srcs",
        "//vendor/github.com/satori/go.uuid:all-srcs",
        "//vendor/github.com/shurcooL/githubv4:all-srcs",
        "//vendor/github.com/shurcooL/go/ctxhttp:all-srcs",
        "//vendor/github.com/shurcooL/graphql:all-srcs",
        "//vendor/github.com/sirupsen/logrus:all-srcs",
        "//vendor/github.com/smartystreets/assertions:all-srcs",
        "//vendor/github.com/smartystreets/goconvey/convey:all-srcs",
        "//vendor/github.com/spf13/pflag:all-srcs",
        "//vendor/github.com/stretchr/testify/assert:all-srcs",
        "//vendor/github.com/swaggo/swag:all-srcs",
        "//vendor/github.com/tektoncd/pipeline/pkg/apis/pipeline:all-srcs",
        "//vendor/github.com/tektoncd/pipeline/pkg/list:all-srcs",
        "//vendor/github.com/tektoncd/pipeline/pkg/names:all-srcs",
        "//vendor/github.com/tektoncd/pipeline/pkg/templating:all-srcs",
        "//vendor/github.com/uber/jaeger-client-go:all-srcs",
        "//vendor/github.com/uber/jaeger-lib/metrics:all-srcs",
        "//vendor/github.com/valyala/bytebufferpool:all-srcs",
        "//vendor/github.com/valyala/quicktemplate:all-srcs",
        "//vendor/github.com/ztrue/tracerr:all-srcs",
        "//vendor/go.opencensus.io:all-srcs",
        "//vendor/go.uber.org/atomic:all-srcs",
        "//vendor/go.uber.org/multierr:all-srcs",
        "//vendor/go.uber.org/zap:all-srcs",
        "//vendor/golang.org/x/crypto/ssh/terminal:all-srcs",
        "//vendor/golang.org/x/oauth2:all-srcs",
        "//vendor/golang.org/x/sync/semaphore:all-srcs",
        "//vendor/golang.org/x/sys/unix:all-srcs",
        "//vendor/golang.org/x/sys/windows:all-srcs",
        "//vendor/golang.org/x/text/internal/language:all-srcs",
        "//vendor/golang.org/x/text/internal/tag:all-srcs",
        "//vendor/golang.org/x/text/language:all-srcs",
        "//vendor/golang.org/x/text/secure/bidirule:all-srcs",
        "//vendor/golang.org/x/text/transform:all-srcs",
        "//vendor/golang.org/x/text/unicode/bidi:all-srcs",
        "//vendor/golang.org/x/text/unicode/norm:all-srcs",
        "//vendor/golang.org/x/text/width:all-srcs",
        "//vendor/golang.org/x/time/rate:all-srcs",
        "//vendor/golang.org/x/tools/go/ast/astutil:all-srcs",
        "//vendor/golang.org/x/tools/go/buildutil:all-srcs",
        "//vendor/golang.org/x/tools/go/internal/cgo:all-srcs",
        "//vendor/golang.org/x/tools/go/loader:all-srcs",
        "//vendor/google.golang.org/api/gensupport:all-srcs",
        "//vendor/google.golang.org/api/googleapi:all-srcs",
        "//vendor/google.golang.org/api/internal:all-srcs",
        "//vendor/google.golang.org/api/iterator:all-srcs",
        "//vendor/google.golang.org/api/option:all-srcs",
        "//vendor/google.golang.org/api/storage/v1:all-srcs",
        "//vendor/google.golang.org/api/transport/http:all-srcs",
        "//vendor/google.golang.org/appengine:all-srcs",
        "//vendor/google.golang.org/genproto/googleapis/api/annotations:all-srcs",
        "//vendor/google.golang.org/genproto/googleapis/iam/v1:all-srcs",
        "//vendor/google.golang.org/genproto/googleapis/rpc/code:all-srcs",
        "//vendor/google.golang.org/genproto/googleapis/rpc/status:all-srcs",
        "//vendor/gopkg.in/eapache/go-resiliency.v1/retrier:all-srcs",
        "//vendor/gopkg.in/go-playground/validator.v9:all-srcs",
        "//vendor/gopkg.in/h2non/gentleman.v2:all-srcs",
        "//vendor/gopkg.in/h2non/gentleman-retry.v2:all-srcs",
        "//vendor/gopkg.in/h2non/gock.v1:all-srcs",
        "//vendor/gopkg.in/inf.v0:all-srcs",
        "//vendor/gopkg.in/ini.v1:all-srcs",
        "//vendor/gopkg.in/robfig/cron.v2:all-srcs",
        "//vendor/gopkg.in/yaml.v2:all-srcs",
        "//vendor/k8s.io/api/admissionregistration/v1beta1:all-srcs",
        "//vendor/k8s.io/api/apps/v1:all-srcs",
        "//vendor/k8s.io/api/apps/v1beta1:all-srcs",
        "//vendor/k8s.io/api/apps/v1beta2:all-srcs",
        "//vendor/k8s.io/api/auditregistration/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/authentication/v1:all-srcs",
        "//vendor/k8s.io/api/authentication/v1beta1:all-srcs",
        "//vendor/k8s.io/api/authorization/v1:all-srcs",
        "//vendor/k8s.io/api/authorization/v1beta1:all-srcs",
        "//vendor/k8s.io/api/autoscaling/v1:all-srcs",
        "//vendor/k8s.io/api/autoscaling/v2beta1:all-srcs",
        "//vendor/k8s.io/api/autoscaling/v2beta2:all-srcs",
        "//vendor/k8s.io/api/batch/v1:all-srcs",
        "//vendor/k8s.io/api/batch/v1beta1:all-srcs",
        "//vendor/k8s.io/api/batch/v2alpha1:all-srcs",
        "//vendor/k8s.io/api/certificates/v1beta1:all-srcs",
        "//vendor/k8s.io/api/coordination/v1:all-srcs",
        "//vendor/k8s.io/api/coordination/v1beta1:all-srcs",
        "//vendor/k8s.io/api/core/v1:all-srcs",
        "//vendor/k8s.io/api/events/v1beta1:all-srcs",
        "//vendor/k8s.io/api/extensions/v1beta1:all-srcs",
        "//vendor/k8s.io/api/networking/v1:all-srcs",
        "//vendor/k8s.io/api/networking/v1beta1:all-srcs",
        "//vendor/k8s.io/api/node/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/node/v1beta1:all-srcs",
        "//vendor/k8s.io/api/policy/v1beta1:all-srcs",
        "//vendor/k8s.io/api/rbac/v1:all-srcs",
        "//vendor/k8s.io/api/rbac/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/rbac/v1beta1:all-srcs",
        "//vendor/k8s.io/api/scheduling/v1:all-srcs",
        "//vendor/k8s.io/api/scheduling/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/scheduling/v1beta1:all-srcs",
        "//vendor/k8s.io/api/settings/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/storage/v1:all-srcs",
        "//vendor/k8s.io/api/storage/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/storage/v1beta1:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/equality:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/meta:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/internalversion:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1beta1:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/conversion:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/fields:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/labels:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/runtime:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/selection:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/types:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/cache:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/diff:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/errors:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/framer:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/json:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/naming:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/net:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/validation:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/yaml:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/version:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/watch:all-srcs",
        "//vendor/k8s.io/apimachinery/third_party/forked/golang/reflect:all-srcs",
        "//vendor/k8s.io/client-go/discovery:all-srcs",
        "//vendor/k8s.io/client-go/dynamic:all-srcs",
        "//vendor/k8s.io/client-go/kubernetes:all-srcs",
        "//vendor/k8s.io/client-go/pkg/apis/clientauthentication:all-srcs",
        "//vendor/k8s.io/client-go/pkg/version:all-srcs",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:all-srcs",
        "//vendor/k8s.io/client-go/rest:all-srcs",
        "//vendor/k8s.io/client-go/third_party/forked/golang/template:all-srcs",
        "//vendor/k8s.io/client-go/tools/auth:all-srcs",
        "//vendor/k8s.io/client-go/tools/cache:all-srcs",
        "//vendor/k8s.io/client-go/tools/clientcmd:all-srcs",
        "//vendor/k8s.io/client-go/tools/metrics:all-srcs",
        "//vendor/k8s.io/client-go/tools/pager:all-srcs",
        "//vendor/k8s.io/client-go/tools/reference:all-srcs",
        "//vendor/k8s.io/client-go/transport:all-srcs",
        "//vendor/k8s.io/client-go/util/cert:all-srcs",
        "//vendor/k8s.io/client-go/util/connrotation:all-srcs",
        "//vendor/k8s.io/client-go/util/flowcontrol:all-srcs",
        "//vendor/k8s.io/client-go/util/homedir:all-srcs",
        "//vendor/k8s.io/client-go/util/jsonpath:all-srcs",
        "//vendor/k8s.io/client-go/util/keyutil:all-srcs",
        "//vendor/k8s.io/client-go/util/retry:all-srcs",
        "//vendor/k8s.io/client-go/util/workqueue:all-srcs",
        "//vendor/k8s.io/klog:all-srcs",
        "//vendor/k8s.io/test-infra/ghproxy/ghcache:all-srcs",
        "//vendor/k8s.io/test-infra/ghproxy/ghmetrics:all-srcs",
        "//vendor/k8s.io/test-infra/prow/apis/prowjobs:all-srcs",
        "//vendor/k8s.io/test-infra/prow/bugzilla:all-srcs",
        "//vendor/k8s.io/test-infra/prow/client/clientset/versioned:all-srcs",
        "//vendor/k8s.io/test-infra/prow/clonerefs:all-srcs",
        "//vendor/k8s.io/test-infra/prow/config:all-srcs",
        "//vendor/k8s.io/test-infra/prow/entrypoint:all-srcs",
        "//vendor/k8s.io/test-infra/prow/errorutil:all-srcs",
        "//vendor/k8s.io/test-infra/prow/flagutil:all-srcs",
        "//vendor/k8s.io/test-infra/prow/gcsupload:all-srcs",
        "//vendor/k8s.io/test-infra/prow/git:all-srcs",
        "//vendor/k8s.io/test-infra/prow/github:all-srcs",
        "//vendor/k8s.io/test-infra/prow/initupload:all-srcs",
        "//vendor/k8s.io/test-infra/prow/kube:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/clone:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/decorate:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/downwardapi:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/gcs:all-srcs",
        "//vendor/k8s.io/test-infra/prow/pod-utils/wrapper:all-srcs",
        "//vendor/k8s.io/test-infra/prow/sidecar:all-srcs",
        "//vendor/k8s.io/test-infra/testgrid/metadata:all-srcs",
        "//vendor/k8s.io/test-infra/testgrid/util/gcs:all-srcs",
        "//vendor/k8s.io/utils/buffer:all-srcs",
        "//vendor/k8s.io/utils/integer:all-srcs",
        "//vendor/k8s.io/utils/trace:all-srcs",
        "//vendor/sigs.k8s.io/yaml:all-srcs",
        "//vendor/vbom.ml/util/sortorder:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
