load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "template.go",
    ],
    importpath = "valerian/app/tool/mkprow",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/mohae/deepcopy:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
    ],
)

go_binary(
    name = "mkprow",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
