load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "http.go",
        "local.go",
    ],
    importpath = "valerian/app/infra/config/http",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/config/conf:go_default_library",
        "//app/infra/config/model:go_default_library",
        "//app/infra/config/service:go_default_library",
        "//library/ecode:go_default_library",
        "//library/log:go_default_library",
        "//library/net/http/mars:go_default_library",
        "//library/net/http/mars/middleware/antispam:go_default_library",
        "//vendor/github.com/dgryski/go-farm:go_default_library",
    ],
)
