load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "arg_rpc.go",
        "client.go",
        "const.go",
        "model.go",
    ],
    importpath = "valerian/app/infra/config/model",
    visibility = ["//visibility:public"],
    deps = [
        "//library/database/sqlx/types:go_default_library",
        "//library/time:go_default_library",
    ],
)
